--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a>
+									<a href="images/7E1A1825-1bw.jpg" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
