--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: smpmfg@missouri.mail.edu</b> 
 							</p>
 							<p> 
 								<b>Address:</b> 
@@ -173,26 +173,26 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter">
+									<a href="https://twitter.com/_scientistsarah" class="icon fa-twitter">
 										<span class="label">Twitter</span>
-									</a>
-								</li>
-								<!-- The Facebook icon -->
-								<li>
-									<a href="#" class="icon fa-facebook">
-										<span class="label">Facebook</span>
 									</a>
 								</li>
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram">
+									<a href="https://www.instagram.com/scientistsarah/?hl=en" class="icon fa-instagram">
 										<span class="label">Instagram</span>
 									</a>
 								</li>
-								<!-- The GitHub icon -->
+								<!-- The LinkedIn icon -->
 								<li>
-									<a href="#" class="icon fa-github">
-										<span class="label">GitHub</span>
+									<a href="https://www.linkedin.com/in/sarah-parker-astronomer/" class="fab fa-linkedin">
+										<span class="label">LinkedIn</span>
+									</a>
+								</li>
+								<!-- The YouTube icon -->
+								<li>
+									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="fab fa-youtube">
+										<span class="label">YouTube</span>
 									</a>
 								</li>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
