--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/kitt_peak_2.jpg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -122,13 +122,22 @@
 								assistant for Dr. Yicheng Guo. Sarah’s research is in the field of extragalactic astronomy.
 							</p>
 							<p>
+								<img src="images/kitt_peak.jpg" alt=""/>
+							</p>
+							<p>
 								Before becoming a student at Mizzou, Sarah graduated from the University of Wisconsin-Stevens Point 
 								with a B.S. in Physics in 2018. There, she did research on the environmental effects on elliptical 
 								and lenticular galaxies with Dr. Adriana Durbala.
 							</p>
 							<p>
+								<img src="images/tamu_poster.jpg" alt=""/>
+							</p>
+							<p>
 								During the summer of 2017, Sarah was a research student with Dr. Peter Brown at Texas A&M. There, 
 								she worked in python to create a template for the light curves of type Ia supernovae.
+							</p>
+							<p>
+								<img src="images/green_bank.jpg" alt=""/>
 							</p>
 							<p>
 								Sarah has been on three observing runs to Kitt Peak National Observatory, where she used the 0.9 m 
