--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/kitt_peak_2.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/kitt_peak_2.jpg"  style="object-fit: cover;">
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -118,14 +118,14 @@
 								Extragalactic astronomy
 							</p>
 							<p>
-								<img src="images/MARAC.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/MARAC.jpg" style="object-fit: cover;">
 							</p>
 							<p>
 								Sarah Parker is a graduate student at the University of Missouri. She is currently a research 
 								assistant for Dr. Yicheng Guo. Sarah’s research is in the field of extragalactic astronomy.
 							</p>
 							<p>
-								<img src="images/kitt_peak.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/kitt_peak.jpg" style="object-fit: cover;">
 							</p>
 							<p>
 								Before becoming a student at Mizzou, Sarah graduated from the University of Wisconsin-Stevens Point 
@@ -133,14 +133,14 @@
 								and lenticular galaxies with Dr. Adriana Durbala.
 							</p>
 							<p>
-								<img src="images/tamu_poster.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/tamu_poster.jpg" style="object-fit: cover;">
 							</p>
 							<p>
 								During the summer of 2017, Sarah was a research student with Dr. Peter Brown at Texas A&M. There, 
 								she worked in python to create a template for the light curves of type Ia supernovae.
 							</p>
 							<p>
-								<img src="images/green_bank.jpg" style="width:350px; height:280px;  object-fit: cover;">
+								<img src="images/green_bank.jpg" style="object-fit: cover;">
 							</p>
 							<p>
 								Sarah has been on three observing runs to Kitt Peak National Observatory, where she used the 0.9 m 
