--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								Extragalactic astronomy
 							</p>
 							<p>
-								<img src="images/MARAC.jpg" style="object-fit: cover;">
+								<img src="images/MARAC.jpg" border-radius: 50%;>
 							</p>
 							<p>
 								Sarah Parker is a graduate student at the University of Missouri. She is currently a research 
