--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 								Extragalactic astronomy
 							</p>
 							<p>
-								<img src="images/MARAC.jpg" border-radius: 50%;>
+								<img src="images/MARAC.jpg" max-width:100%; height:auto;>
 							</p>
 							<p>
 								Sarah Parker is a graduate student at the University of Missouri. She is currently a research 
 								assistant for Dr. Yicheng Guo. Sarah’s research is in the field of extragalactic astronomy.
 							</p>
 							<p>
-								<img src="images/kitt_peak.jpg" style="object-fit: cover;">
+								<img src="images/kitt_peak.jpg" max-width:100%; height:auto;>
 							</p>
 							<p>
 								Before becoming a student at Mizzou, Sarah graduated from the University of Wisconsin-Stevens Point 
@@ -133,14 +133,14 @@
 								and lenticular galaxies with Dr. Adriana Durbala.
 							</p>
 							<p>
-								<img src="images/tamu_poster.jpg" style="object-fit: cover;">
+								<img src="images/tamu_poster.jpg" max-width:100%; height:auto;>
 							</p>
 							<p>
 								During the summer of 2017, Sarah was a research student with Dr. Peter Brown at Texas A&M. There, 
 								she worked in python to create a template for the light curves of type Ia supernovae.
 							</p>
 							<p>
-								<img src="images/green_bank.jpg" style="object-fit: cover;">
+								<img src="images/green_bank.jpg" max-width:100%; height:auto;>
 							</p>
 							<p>
 								Sarah has been on three observing runs to Kitt Peak National Observatory, where she used the 0.9 m 
