--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 									the next line.
 								-->
 								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<a href="images/poster_new.pdf">Click here for the pdf file of my research poster.</a>
 							</p>
 							<p>
 								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
