--- a/index.html
+++ b/index.html
@@ -160,11 +160,14 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
-								<a href="images/poster_new.pdf">Click here for the pdf file of my research poster.</a>
+								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b><br>Project description, including further links to posters, talks, publications.
+								
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b><a href="images/sne-poster-final.pdf">Comparison of Light Curves for Type Ia Supernovae in the Optical and Ultraviolet</a></b><br>Project description, including further links to posters, talks, publications.
+							</p>
+							<p>
+								<b><a href="images/poster_2017_sarah.pdf">Elliptical Galaxies in Different Environments - Isolated versus Group Environment</a></b><br>Project description, including further links to posters, talks, publications.
 							</p>
 						</article>
 
