--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
 							<p>
+								<b>NOTE:</b> Currently Sarah does not currently have any publications in peer-reviewed journals, but 
+								hopes to publish in the relatively near future. For now, please enjoy her research posters:
+							</p>
+							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
