--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b><br>Project description, including further links to posters, talks, publications.
+								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b>
 								
 							</p>
 							<p>
-								<b><a href="images/sne-poster-final.pdf">Comparison of Light Curves for Type Ia Supernovae in the Optical and Ultraviolet</a></b><br>Project description, including further links to posters, talks, publications.
+								<b><a href="images/sne-poster-final.pdf">Comparison of Light Curves for Type Ia Supernovae in the Optical and Ultraviolet</a></b>
 							</p>
 							<p>
-								<b><a href="images/poster_2017_sarah.pdf">Elliptical Galaxies in Different Environments - Isolated versus Group Environment</a></b><br>Project description, including further links to posters, talks, publications.
+								<b><a href="images/poster_2017_sarah.pdf">Elliptical Galaxies in Different Environments - Isolated versus Group Environment</a></b>
 							</p>
 						</article>
 
