--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
 							<p>
-								<b>NOTE:</b> Currently Sarah does not have any publications in peer-reviewed journals, but 
+								<b>NOTE:</b> Sarah does not currently have any publications in peer-reviewed journals, but 
 								hopes to publish in the relatively near future. For now, please enjoy her research posters:
 							</p>
 							<p>
