--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
 							</span>
 							<p>
 								<b>NOTE:</b> Sarah does not currently have any publications in peer-reviewed journals, but 
