--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 								<!-- The YouTube icon -->
 								<li>
 									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="fab fa-youtube">
-										<i class="far fa-youtube"></i>
+										<i class="fab fa-youtube"></i>
 									</a>
 								</li>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
