--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
-								</li>
-								<li>
 									<a href="#contact">Contact</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
@@ -175,31 +172,11 @@
 							</p>
 						</article>
 
-						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
-							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
-							</span>
-							<p>
-								<b>Teaching:</b>
-							</p>
-							<p>
-								<b>Outreach:</b>
-							</p>
-							<p>
-								<b>Equity & Inclusion:</b>
-							</p>
-						</article>
-
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
 								<b>Email: smpmfg@missouri.mail.edu</b> 
-							</p>
-							<p> 
-								<b>Address:</b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
@@ -224,14 +201,14 @@
 								</li>
 								<!-- The LinkedIn icon -->
 								<li>
-									<a href="https://www.linkedin.com/in/sarah-parker-astronomer/" class="fab fa-linkedin">
+									<a href="https://www.linkedin.com/in/sarah-parker-astronomer/" class="icon fa-linkedin">
 										<span class="label">LinkedIn</span>
 									</a>
 								</li>
 								<!-- The YouTube icon -->
 								<li>
-									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="fab fa-youtube">
-										<i class="fab fa-youtube"></i>
+									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="icon fa-youtube">
+										<i class="far fa-youtube"></i>
 									</a>
 								</li>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
