--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 								<!-- The YouTube icon -->
 								<li>
 									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="icon fa-youtube">
-										<i class="fab fa-youtube"></i>
+										<span class="fab fa-youtube"></span>
 									</a>
 								</li>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
