--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Graduate Student
+									Master of Science, Physics and Astronomy
 								</p>
 								<p>
 									University of Missouri Columbia
