--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/cv-sarah-parker-july-2018.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="images/Copy_of_Resume.pdf" target="_blank">Resume</a>
 								</p>
 							</div>
 						</div>
@@ -107,7 +107,7 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>
-								Current physics graduate student at University of Missouri, 
+								M.S. in Physics and Astronomy at University of Missouri, 
 								B.S. in Physics at University of Wisconsin - Stevens Point
 							</p>
 							<p>
@@ -118,14 +118,14 @@
 								<img src="images/MARAC.jpg" style="max-width:100%; height:auto;">
 							</p>
 							<p>
-								Sarah Parker is a graduate student at the University of Missouri. She is currently a research 
-								assistant for Dr. Yicheng Guo. Sarah’s research is in the field of extragalactic astronomy.
+								Sarah Parker graduated with a M.S. in Physics and Astronomy at the University of Missouri. 
+								Sarah’s research was in the field of extragalactic astronomy.
 							</p>
 							<p>
 								<img src="images/kitt_peak.jpg" style="max-width:100%; height:auto;">
 							</p>
 							<p>
-								Before becoming a student at Mizzou, Sarah graduated from the University of Wisconsin-Stevens Point 
+								Before recieving her M.S. at Mizzou, Sarah graduated from the University of Wisconsin-Stevens Point 
 								with a B.S. in Physics in 2018. There, she did research on the environmental effects on elliptical 
 								and lenticular galaxies with Dr. Adriana Durbala.
 							</p>
