--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Copy_of_Resume.pdf" target="_blank">Resume</a>
+									<a href="images/Copy_of_Resume.pdf" target="_blank">Résumé</a>
 								</p>
 							</div>
 						</div>
