--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 								<li>
 									<a href="#contact">Contact</a>
 								</li>
+								<li>
+									<a href="#blog">Blog</a>
+								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
@@ -172,9 +175,9 @@
 							</p>
 						</article>
 
-						<!-- Here is a the "Contact" card. -->
-						<article id="contact">
-							<h2 class="major">Contact</h2>
+						<!-- Here is a the "Blog" card. -->
+						<article id="blog">
+							<h2 class="major">Blog</h2>
 							<p> 
 								<b>Email: smpmfg@missouri.mail.edu</b> 
 							</p>
@@ -222,6 +225,31 @@
 									</a>
 								</li> -->
 							</ul>
+							</article>
+
+						<!-- Here is the "Research" card. -->
+						<article id="research">
+							<h2 class="major">Research</h2>
+							<span class="image main">
+								<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+							</span>
+							<p>
+								<b>NOTE:</b> Sarah does not currently have any publications in peer-reviewed journals, but 
+								hopes to publish in the relatively near future. For now, please enjoy her research posters:
+							</p>
+							<p>
+								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
+									the next line.
+								-->
+								<b><a href="images/poster_new.pdf">Lenticular Galaxies in Different Environments - Isolated versus Group Environment</a></b>
+								
+							</p>
+							<p>
+								<b><a href="images/sne-poster-final.pdf">Comparison of Light Curves for Type Ia Supernovae in the Optical and Ultraviolet</a></b>
+							</p>
+							<p>
+								<b><a href="images/poster_2017_sarah.pdf">Elliptical Galaxies in Different Environments - Isolated versus Group Environment</a></b>
+							</p>
 						</article>
 					</div>
 
