--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Master of Science, Physics and Astronomy
-								</p>
-								<p>
-									University of Missouri Columbia
+									Master of Science, Physics and Astronomy <br> University of Missouri Columbia
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
