--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 									a short line about yourself.
 								-->
 								<p>
+									Master of Science, Curriculum & Instruction <br> University of Wisconsin-Milwaukee <br> Expected June 2022
+								</p>
+								<p>
 									Master of Science, Physics and Astronomy <br> University of Missouri Columbia
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
