--- a/index.html
+++ b/index.html
@@ -176,6 +176,49 @@
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
+							
+							<!-- 	Here are the fancy icons that link to your social media.
+								These icons are rendered using Font Awesome fonts, and you can find more icons
+								here: https://fontawesome.com/icons
+							-->
+							<ul class="icons">
+								<!-- The Twitter icon -->
+								<li>
+									<!-- 	Note that you need to change the link to point to your page.
+										Replace "#" with your Twitter profile page.
+									-->
+									<a href="https://twitter.com/_scientistsarah" class="icon fa-twitter">
+										<span class="label">Twitter</span>
+									</a>
+								</li>
+								<!-- The Instagram icon -->
+								<li>
+									<a href="https://www.instagram.com/scientistsarah/?hl=en" class="icon fa-instagram">
+										<span class="label">Instagram</span>
+									</a>
+								</li>
+								<!-- The LinkedIn icon -->
+								<li>
+									<a href="https://www.linkedin.com/in/sarah-parker-astronomer/" class="icon fa-linkedin">
+										<span class="label">LinkedIn</span>
+									</a>
+								</li>
+								<!-- The YouTube icon -->
+								<li>
+									<a href="https://www.youtube.com/channel/UC_GE03wwLQy5b7xy5hqAfBw?view_as=subscriber" class="icon fa-youtube">
+										<span class="fab fa-youtube"></span>
+									</a>
+								</li>
+								<!-- 	We can add a new icon by searching on the Font Awesome website
+									for the correct class name and inserting it as a new list item.
+									We found "envelope" here: https://fontawesome.com/icons/envelope
+								-->
+								<!-- <li>
+									<a href="#" class="icon fa-envelope">
+										<span class="label">Email</span>
+									</a>
+								</li> -->
+							</ul>
 						
 						</article>
 
