--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
 									a short line about yourself.
 								-->
 								<p>
-									Master of Science, Physics and Astronomy
+									Master of Science, Curriculum & Instruction
+								<br>
+									University of Wisconsin Milwaukee
+								<br>
+									Expected June 2022
 								</p>
+								
 								<p>
+									Master of Science, Physics and Astronomy
+								<br>
 									University of Missouri Columbia
+								<br>
+									Awarded June 2020
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
