--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 							<h2 class="major">Blog</h2>
 							
 							<p>
-								<b>This page is currently under construction.</b>
+								This page is currently under construction.
 							</p>
 							
 						</article>
