--- a/index.html
+++ b/index.html
@@ -240,7 +240,30 @@
 							<h2 class="major">Blog</h2>
 							
 							<p>
-								This page is currently under construction.
+								July 06, 2021
+							</p>
+							<p>
+								Blog #1: Welcome to My Professional Blog
+							</p>
+							<p>
+								Hi there! My name is Sarah. Welcome to my blog!
+							</p>
+							<p>
+								Here is some background on me: I have two degrees in physics, with a research background in astronomy. 
+								I am extremely passionate about space, science, and education. After graduating with my M.S. in Physics 
+								and Astronomy during the COVID-19 pandemic, I was hard pressed to find a job in my field. In this time, 
+								I reflected on my past experiences, and thought of a plan to move forward. During my career I had been a 
+								tutor, teaching assistant, and planetarium lecturer. It became clear to me that not only was I passionate 
+								about physics and astronomy, but about education too! I had done it informally for the better part of a 
+								decade. So, I did what any sane (and completely non-masochistic) person would do and enroll in college 
+								again for the third time—this time at the University of Wisconsin-Milwaukee (UWM).
+							</p>
+							<p>
+								This time around, I am enrolled in the MACSTEP Program at UWM to get my teaching certification in Physics, 
+								as well as a Master’s in Curriculum & Instruction. Starting in fall of 2021, I will be teaching physics and 
+								precalculus at a high school in Milwaukee. In this year, I hope to learn how to be the best teacher I 
+								possibly can be, and to be a positive influence in the lives of my students. 
+
 							</p>
 							
 						</article>
