--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
 							<p>
 								Blog #1: Welcome to My Professional Blog
 							</p>
+							<span class="image main">
+								<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+							</span>
 							<p>
 								Hi there! My name is Sarah. Welcome to my blog!
 							</p>
