PhET simulations hyperlink

--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
 								possibly can be, and to be a positive influence in the lives of my students. 
 
 							</p>
+							<p>
+								<a href="https://phet.colorado.edu/">PhET Simulations</a>
 							
 						</article>
 
