--- a/index.html
+++ b/index.html
@@ -269,7 +269,10 @@
 
 							</p>
 							<p>
-								<a href="https://phet.colorado.edu/">PhET Simulations</a>
+								One of my favorite physics websites is <a href="https://phet.colorado.edu/">PhET</a> by the University of Colorado 
+								Boulder. They have simulations for many different physics concepts, which will be a great tool to help my 
+								students visualize these phenomena. I look forward to incorporating it into my classroom!
+							</p>
 							
 						</article>
 
