--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@
 							<p>
 								July 06, 2021
 							</p>
-							<p>
-								Blog #1: Welcome to My Professional Blog
-							</p>
+								<h4 class="major">Blog #1: Welcome to My Professional Blog</h4>
+						
 							<span class="image main">
 								<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
 							</span>
