--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="#contact">Contact</a>
 								</li>
 								<li>
-									<a href="#blog">Blog</a>
+									<a href="#blog1","#blog2" >Blog</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
