--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 								<li>
 									<a href="#blog" >Blog</a>
 								</li>
+								<li>
+									<a href="#blog" >Blog2</a>
+								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
