--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<a href="#blog" >Blog</a>
 								</li>
 								<li>
-									<a href="#blog" >Blog2</a>
+									<a href="#blog2" >Blog2</a>
 								</li>
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
@@ -294,12 +294,10 @@
 								<p>
 								July 10, 2021
 								</p>
-								<!-- begin wwww.htmlcommentbox.com -->
-								 <div id="HCB_comment_box2"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
-								 <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
-								 <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16798&num=10&ts=1625956173607");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-								<!-- end www.htmlcommentbox.com -->
+						
 								
+						</article>
+						<article id="blog2">
 						</article>
 
 					</div>
