hyperlink to blog 1

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 								
 						</article>
 						<article id="blog2">
+						Find blog 1 here: <a href="https://sarahparkerastro.com/#blog">blog 1</a>
 						</article>
 
 					</div>
