--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
 						</article>
 						<article id="blog">
 							<p>
-							Find blog 1 here: <a href="https://sarahparkerastro.com/#blog1">Welcome to My Professional Blog</a>
+							Blog 1: <a href="https://sarahparkerastro.com/#blog1">Welcome to My Professional Blog</a>
 							</p>
 							<p>
-							Find blog 2 here: <a href="https://sarahparkerastro.com/#blog2">Where I am and Where I want to Go</a>
+							Blog 2: <a href="https://sarahparkerastro.com/#blog2">Where I am and Where I want to Go</a>
 							</p>
 						</article>
 
