--- a/index.html
+++ b/index.html
@@ -285,26 +285,13 @@
 								<p>
 								July 10, 2021
 								</p>
-							
-								<!-- comment box starts here -->
-								<section id="app">
-								    <div class="container">
-								      <div class="row">
-									<div class="col-6">
-									  <div class="comment">
-									<p v-for="items in item" v-text="items"></p>
-									  </div><!--End Comment-->
-									  </div><!--End col -->
-									  </div><!-- End row -->
-								      <div class="row">
-									<div class="col-6">
-								      <textarea type="text" class="input" placeholder="Write a comment" v-model="newItem" @keyup.enter="addItem()"></textarea>
-									  <button v-on:click="addItem()" class='primaryContained float-right' type="submit">Add Comment</button>
-									</div><!-- End col -->
-								      </div><!--End Row -->
-								    </div><!--End Container -->
-								  </section><!-- end App -->
-								
+							<!-- HTML Codes by Quackit.com -->
+							<style type="text/css">
+							textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:14pt;color:#000000;}
+							input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:14pt;color:#000000;}
+							</style>
+							<form method="post" action="https://sarahparkerastro.com/#blog2"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comment Here!</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
+
 						</article>
 						<article id="blog">
 							<p>
