--- a/index.html
+++ b/index.html
@@ -285,13 +285,12 @@
 								<p>
 								July 10, 2021
 								</p>
-							<!-- HTML Codes by Quackit.com -->
-							<style type="text/css">
-							textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:14pt;color:#000000;}
-							input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:14pt;color:#000000;}
-							</style>
-							<form method="post" action="https://sarahparkerastro.com/#blog2"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comment Here!</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
-
+								<!-- HTML Codes by Quackit.com -->
+								<style type="text/css">
+								textarea.html-text-box {background-color:#FFFFFF;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:14pt;color:#000033;}
+								input.html-text-box {background-color:#000033;font-family:Arial;font-size:14pt;color:#FFFFFF;}
+								</style>
+								<form method="post" action="https://sarahparkerastro.com/#blog2"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comments here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
 						</article>
 						<article id="blog">
 							<p>
