--- a/index.html
+++ b/index.html
@@ -283,12 +283,72 @@
 						<article id="blog2">
 								<h4 class="major">Blog #2: Where I am and Where I want to Go</h4>
 								<p>
-								July 10, 2021
+								July 13, 2021
 								</p>
 								<p>
-								done
+								"I know that I know nothing." The Socratic paradox. The more educated I become, the less I seem to know about… well, anything. 
+								When I did astronomy research, it seemed that the further I dug the more questions I unveiled. What are the rules and mechanisms 
+								that govern our Earth, our Solar System, our Galaxy, our Universe? Why do astronomical objects act the way they do? Of course, 
+								the classic: How did we (humans) get here on Earth!? What differentiates us from the other objects in our Solar System, or our 
+								Sun from the other Stars in our Galaxy? Could there even be life out there that we do not know about? So many questions, yet so few answers. 
 								</p>
-							
+								<p>
+								In this blog, I will focus on the question “What are the rules and mechanisms that govern our Universe?” I will have hyperlinks 
+								sporadically throughout this blog for further reading on these topics in case they are of interest to you. These are links that 
+								I handpicked, which helped me research this topic and gain a better understanding. 
+								</p>
+								<p>
+								Well, on a small scale, we know that the Moon goes around, or orbits, the Earth. And the Earth orbits the Sun, of course. 
+								Seems simple to us, right? But it wasn’t always that obvious. There is a long and complicated 
+								<a href="https://earthobservatory.nasa.gov/features/OrbitsHistory/page2.php">history of orbital mechanics</a> 
+								dating back to ancient civilizations. Of course, when they looked up at the sky, they saw that the Sun, the Moon, and stars 
+								all go from East to West. It follows logic that day after day all these objects move around us, and we are the center. 
+								Sometimes though, some of the planets would move backwards for a while, and then return to the normal path. Why!? Well as 
+								mathematics advanced, people realized that the Earth wasn’t the center! And this motion is called apparent retrograde motion. 
+								This apparent motion is actually caused by the<a href="https://en.wikipedia.org/wiki/Celestial_mechanics">Sun being the center of the Solar System</a>!
+								</p>
+								<p>
+								Now we know how the Solar System operates- but what about beyond that? All the stars are on the firmament, 
+								right? WRONG! We are no longer in the 4th century and know that stars MOVE and are at varied DISTANCES! 
+								But… how did we figure this out? Well, a couple ways: First, with parallax. Second, with Doppler shift. 
+								</p>
+								<p>
+								First let’s discuss <a href="https://www.space.com/30417-parallax.html">parallax.</a> You can see this in your day-to-day life. Look at an object across the 
+								room from you. Now, put your index finger up in front of the object. Close your left eye, then close 
+								your right eye. Your finger should change position in relation to further object. We can see this 
+								with the stars, too! As the Earth moves around the sun, it gives us different vantage points in space, 
+								much like how each of our eyes have different vantage points. We can then see closer stars (or our finger) 
+								move in relation to more distant stars (our object) as the Earth’s moves along the Sun’s orbit (or as we 
+								change which eye we look out of). This is how astronomers realized that stars are not actually just on a 
+								dome, or firmament.
+								</p>
+								<p>
+								Next, let’s discuss <a href="https://www.exploratorium.edu/origins/hubble/tools/doppler.html">Doppler shift</a>. Have you ever heard a car coming toward you, and the tone of the 
+								car was higher as it moved toward you and lower as it moved away from you? This happens because the 
+								sound gets stretched and squished due to the movement of car—or in other words, the wavelength of 
+								the sound changes. Well, light does this too! This phenomenon is called Doppler Shift. We can tell 
+								how fast a star or galaxy is moving towards or away from us using this technique. The weird thing 
+								is that we find that most objects are moving away from us (or redshifted) as opposed to towards 
+								us (or blueshifted). WHY!? 	
+								</p>
+								<p>	
+								Well, we’re not quite sure why. ¯\_(ツ)_/¯ But we call this <a href="https://earthsky.org/space/definition-what-is-dark-energy/">dark energy</a>. We have the capability to 
+								tell that everything in the Universe is expanding and everything appears to be moving away from us. 
+								But dark energy is a topic that even stumps my professors and colleagues in astronomy. We know it 
+								exists, but we have no clue why it happens. There are even some parts of the Universe that seem to 
+								be more populated with galaxies (like the <a href="https://www.universetoday.com/113150/what-is-the-great-attractor/">Great Attractor</a>) than others. But in all honesty, we have 
+								no freaking clue as to why. I can only hope that this question will be answered in my lifetime 
+								(perhaps by one of my students), but for now, it is a mystery.	
+								</p>
+								<p>
+								So despite knowing more about astronomy than the average person, I still am in the dark on many 
+								things, such as dark energy and it’s implications on the end of our Universe. I know a lot about 
+								the history of orbital mechanics, I know how to calculate different variables regarding orbits, and 
+								generally know how things work on a small scale. While I poke fun at ancient and early astronomers 
+								in this article, we are no better. They did the best with the knowledge and observations that they 
+								had, just like we are doing. And yet, we ultimately have the same question: What are the rules and 
+								mechanisms that govern our Universe?
+								</p>
 							
 								<!-- begin wwww.htmlcommentbox.com -->
 								 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
