--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
 								<p>
 								July 13, 2021
 								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 								<p>
 								"I know that I know nothing." The Socratic paradox. The more educated I become, the less I seem to know about… well, anything. 
 								When I did astronomy research, it seemed that the further I dug the more questions I unveiled. What are the rules and mechanisms 
@@ -307,6 +310,9 @@
 								mathematics advanced, people realized that the Earth wasn’t the center! And this motion is called apparent retrograde motion. 
 								This apparent motion is actually caused by the <a href="https://en.wikipedia.org/wiki/Celestial_mechanics">Sun being the center of the Solar System</a>!
 								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 								<p>
 								Now we know how the Solar System operates- but what about beyond that? All the stars are on the firmament, 
 								right? WRONG! We are no longer in the 4th century and know that stars MOVE and are at varied DISTANCES! 
@@ -322,15 +328,26 @@
 								change which eye we look out of). This is how astronomers realized that stars are not actually just on a 
 								dome, or firmament.
 								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 								<p>
 								Next, let’s discuss <a href="https://www.exploratorium.edu/origins/hubble/tools/doppler.html">Doppler shift</a>. Have you ever heard a car coming toward you, and the tone of the 
 								car was higher as it moved toward you and lower as it moved away from you? This happens because the 
 								sound gets stretched and squished due to the movement of car—or in other words, the wavelength of 
-								the sound changes. Well, light does this too! This phenomenon is called Doppler Shift. We can tell 
+								the sound changes. 
+								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
+								<p>
+								Well, light does this too! This phenomenon is called Doppler Shift. We can tell 
 								how fast a star or galaxy is moving towards or away from us using this technique. The weird thing 
 								is that we find that most objects are moving away from us (or redshifted) as opposed to towards 
 								us (or blueshifted). WHY!? 	
-								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 								<p>	
 								Well, we’re not quite sure why. ¯\_(ツ)_/¯ But we call this <a href="https://earthsky.org/space/definition-what-is-dark-energy/">dark energy</a>. We have the capability to 
 								tell that everything in the Universe is expanding and everything appears to be moving away from us. 
@@ -340,6 +357,9 @@
 								no freaking clue as to why. I can only hope that this question will be answered in my lifetime 
 								(perhaps by one of my students), but for now, it is a mystery.	
 								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 								<p>
 								So despite knowing more about astronomy than the average person, I still am in the dark on many 
 								things, such as dark energy and it’s implications on the end of our Universe. I know a lot about 
@@ -349,6 +369,9 @@
 								had, just like we are doing. And yet, we ultimately have the same question: What are the rules and 
 								mechanisms that govern our Universe?
 								</p>
+								<span class="image main">
+									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+								</span>
 							
 								<!-- begin wwww.htmlcommentbox.com -->
 								 <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
