--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 								July 13, 2021
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/Socrates.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>
 								"I know that I know nothing." The Socratic paradox. The more educated I become, the less I seem to know about… well, anything. 
@@ -311,7 +311,7 @@
 								This apparent motion is actually caused by the <a href="https://en.wikipedia.org/wiki/Celestial_mechanics">Sun being the center of the Solar System</a>!
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/celestial-mechanics-medieval-artwork-6468943.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>
 								Now we know how the Solar System operates- but what about beyond that? All the stars are on the firmament, 
