update pics for blog 2

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 								dome, or firmament.
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/slide_2.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>
 								Next, let’s discuss <a href="https://www.exploratorium.edu/origins/hubble/tools/doppler.html">Doppler shift</a>. Have you ever heard a car coming toward you, and the tone of the 
@@ -338,7 +338,7 @@
 								the sound changes. 
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/FeatureDoppler.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>
 								Well, light does this too! This phenomenon is called Doppler Shift. We can tell 
@@ -346,7 +346,7 @@
 								is that we find that most objects are moving away from us (or redshifted) as opposed to towards 
 								us (or blueshifted). WHY!? 	
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/maxresdefault.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>	
 								Well, we’re not quite sure why. ¯\_(ツ)_/¯ But we call this <a href="https://earthsky.org/space/definition-what-is-dark-energy/">dark energy</a>. We have the capability to 
@@ -358,7 +358,7 @@
 								(perhaps by one of my students), but for now, it is a mystery.	
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/690958main_p1237a1.jpg" style="max-width:100%; height:auto;">
 								</span>
 								<p>
 								So despite knowing more about astronomy than the average person, I still am in the dark on many 
@@ -370,7 +370,7 @@
 								mechanisms that govern our Universe?
 								</p>
 								<span class="image main">
-									<img src="images/poster_pic.jpg" style="max-width:100%; height:auto;">
+									<img src="images/56197main_dark_schematic-lg.jpg" style="max-width:100%; height:auto;">
 								</span>
 							
 								<!-- begin wwww.htmlcommentbox.com -->
