--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 								 <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} hcb_user.PAGE="https://sarahparkerastro.com/#blog2";(function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ox2Pic3Yvwie.ZBcCAK5O1"+"&opts=16790&num=10&ts=1625960671369");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 								<!-- end www.htmlcommentbox.com -->
 
+						</article>
 						<article id="blog3">
 								
 								<h4 class="major">Blog #3</h4>
