--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 						</article>
 						<article id="blog3">
 								
-								<h4 class="major">Blog #3</h4>
+								<h4 class="major">Blog #3: Visualizing Understanding</h4>
 								<p>
 									July 20, 2021
 								</p>
@@ -400,7 +400,7 @@
 							Blog 2: <a href="https://sarahparkerastro.com/#blog2">Where I am and Where I want to Go</a>
 							</p>
 							<p>
-							Blog 3: <a href="https://sarahparkerastro.com/#blog3">blog 3</a>
+							Blog 3: <a href="https://sarahparkerastro.com/#blog3">Visualizing Understanding</a>
 							</p>
 						</article>
 
